--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           - Android # Build an Android .apk standalone app.
     steps:
       - uses: actions/checkout@v3
-        with:
+        # with:
           # fetch-depth: 0
           # lfs: true
       - uses: actions/cache@v2
