--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Build-${{ matrix.targetPlatform }}
-          path: ./${{ matrix.targetPlatform }}
+          path: artifacts-builds/${{ matrix.targetPlatform }}
