develop: test CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
         # with:
           # fetch-depth: 0
           # lfs: true
+      - name: Unity - Activate
+        uses: game-ci/unity-activate@v1.3
+        
       - uses: actions/cache@v2
         with:
           path: Library
